--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
 <body>
     <h1>My Flickr search app!</h1>
 
-    <p>
-    <form>
-        <label for="search">Enter your search here: </label>
-        <input type="text" name="search">
+    <main>
+        <section id="searchbar">
+            <label for="search">Enter your search here: </label>
+            <input type="text" name="search">
 
-        <button>Search</button>
-        <br> <br>
-        <label for="size">Chose the size of the picture: </label>
-        <select name="size" id="size">
+            <button>Search</button>
+        </section>
+        <br>
+        <section id="sizeselect">
+            <label for="size">Chose the size of the picture: </label>
+            <select name="size" id="size">
 
-            <option value="q">Thumbnail</option>
-            <option value="n">Small</option>
-            <option value="z">Medium</option>
-            <option value="h">Large</option>
+                <option value="q">Thumbnail</option>
+                <option value="n">Small</option>
+                <option value="z">Medium</option>
+                <option value="h">Large</option>
 
-        </select>
-
-
-
-    </form>
-
-
-    </p>
+            </select>
+        </section>
+    </main>
 
 
 
